--- a/react-meme-app/src/login-components/Login.css
+++ b/react-meme-app/src/login-components/Login.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     /* margin-top: 200px; */
   
     background-color: #EAE7DC;
@@ -19,10 +19,19 @@
     border: 1px solid lightgray;
     padding: 20px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: white !important;
+    align-items: center;
+    justify-content: center;
 }
 .login_component>h2{
     font-weight: 400;
     display: flex;
     padding: 6px;
     justify-content: space-between;
+    align-items: center;
+}
+.button{
+    margin-top: 10px !important;
+    text-transform: inherit !important;
+    width: 100%;
 }
