--- a/react-meme-app/src/meme-components/MemePage.css
+++ b/react-meme-app/src/meme-components/MemePage.css
@@ -101,3 +101,17 @@
         max-width: 400px;
     }
 }
+.app_loading{
+    display:grid;
+place-items:center;
+height:100vh;
+width:100%;
+}
+.app_loading_container{
+    text-align:center;
+padding-bottom:100px;
+display:flex;
+flex-direction:column;
+justify-content:center;
+align-items:center;
+}
