--- a/react-meme-app/src/login-components/Login.css
+++ b/react-meme-app/src/login-components/Login.css
@@ -2,14 +2,31 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
-    /* margin-top: 200px; */
-  
-    background-color: #EAE7DC;
-    height: 100vh;
+    position: relative;
+   
+    height: 100%;
+
 }
+ /* Setting up the background Image */
+.login_div::after{
+content: '';
+position: absolute;
+top: 0px;
+left: 0px;
+right: 0px;
+bottom: 0px;
+background: url('background-img.jpg');
+    
+background-repeat: no-repeat;
+background-size: cover;
+z-index: -1;
+
+}
+
 .login_div>h1{
     font-weight: 600;
+    
+    z-index: 100;
 }
 .login_div>img{
     height: 100px;
@@ -22,6 +39,9 @@
     background-color: white !important;
     align-items: center;
     justify-content: center;
+    width: 300px;
+    height: 200px;
+    z-index: 100;
 }
 .login_component>h2{
     font-weight: 400;
@@ -33,5 +53,5 @@
 .button{
     margin-top: 10px !important;
     text-transform: inherit !important;
-    width: 100%;
+    width: 80%;
 }
