--- a/react-meme-app/src/meme-components/MemeGenerated.css
+++ b/react-meme-app/src/meme-components/MemeGenerated.css
@@ -3,12 +3,26 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 10px;
+    overflow: hidden !important;
+    height: 100%;
 }
-.generate_btn{
-    margin-bottom: 10px !important;
+.meme_generated_div::before{
+content: "";
+position: absolute;
+top: 0px;
+left: 0px;
+right: 0px;
+bottom: 0px;
+background: url('../login-components/background-img.jpg');
+background-repeat: no-repeat;
+background-size: cover;
+z-index: -1;
+}
+.copy_url_btn{
+    margin: 10px !important;
     text-transform: inherit !important;
-    font-size: 20px !important;
+    font-size: 16px !important;
 }
 h1{
     font-weight: 400;
