--- a/react-meme-app/src/meme-components/SaveList.css
+++ b/react-meme-app/src/meme-components/SaveList.css
@@ -1,3 +1,6 @@
+.saveList{
+  background-color: #EAE7DC;
+}
 .movie-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -12,13 +15,15 @@
   }
   .back_icon{
     cursor: pointer;
-   font-size: 2.5rem !important;
+   font-size: 1rem !important;
   }
-  .back_icon:hover{
+  /* .back_icon:hover{
     color: gray;
-  }
+  } */
   .saveList_header> h1{
-    font-weight: 600;
+    font-weight: 300 !important;
+    font-weight: 500;
+    font-size: 40px;
     margin-right: 6px;
 
   }
