--- a/react-meme-app/src/App.css
+++ b/react-meme-app/src/App.css
@@ -1,6 +1,8 @@
 .App {
 height: 100vh;
-background-color: #EAE7DC;
+/* background-color: #EAE7DC; */
+background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+
 }
 
 .App-logo {
