--- a/react-meme-app/src/meme-components/Generate-Meme.css
+++ b/react-meme-app/src/meme-components/Generate-Meme.css
@@ -13,6 +13,16 @@
     justify-content: center;
     overflow:hidden !important ;
     height: 100%;
+   
+}
+.meme_box{
+    /* margin-top: 10px; */
+    flex-direction: column-reverse;
+    margin-bottom: 4%;
+}
+.meme_box>p{
+    color: white;
+
 }
 .generate_meme_div::before{
 content: "";
@@ -26,7 +36,9 @@ background-repeat: no-repeat;
 background-size: cover;
 z-index: -1;
 }
-
+.generate_meme_div>p{
+    color: white;
+}
 .generate_meme_btn{
  margin-top: 10px !important;
  text-transform: inherit !important;
@@ -50,7 +62,7 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-  
+    margin-bottom: 3%;
    
 }
 .input_conatiner>input{
