UI theme changes --dark-theme

--- a/react-meme-app/src/login-components/Login.css
+++ b/react-meme-app/src/login-components/Login.css
@@ -8,7 +8,7 @@
 
 }
 .login_div>h1{
-    color: #E85A4F;
+    color: #edf4fb;
     font-weight: 300 !important;
  
     font-size: 50px;
@@ -43,7 +43,7 @@ z-index: -1;
     border: 1px solid lightgray;
     padding: 20px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    background-color: white !important;
+    background-color: #edf4fb !important;
     align-items: center;
     justify-content: center;
     width: 300px;
