--- a/react-meme-app/src/meme-components/SaveList.css
+++ b/react-meme-app/src/meme-components/SaveList.css
@@ -23,10 +23,10 @@
   } */
   .saveList_header> h1{
     font-weight: 300 !important;
-    font-weight: 500;
+
     font-size: 40px;
     margin-right: 6px;
-
+    color: #edf4fb;
   }
   .meme_header_img{
     height: 60px !important;
