--- a/react-meme-app/src/meme-components/Generate-Meme.css
+++ b/react-meme-app/src/meme-components/Generate-Meme.css
@@ -15,6 +15,11 @@
     height: 100%;
    
 }
+.generate_meme_div_header{
+    width: 100%;
+    margin-top: 10px;
+}
+
 .meme_box{
     /* margin-top: 10px; */
     flex-direction: column-reverse;
@@ -40,7 +45,7 @@ z-index: -1;
     color: #edf4fb;
 }
 .generate_meme_btn{
- margin-top: 10px !important;
+ margin-top: 0px !important;
  text-transform: inherit !important;
 }
 p{
@@ -55,7 +60,7 @@ p{
 }
 
 .input_conatiner{
-    margin-top: 10px;
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
