--- a/react-meme-app/src/meme-components/MemeGenerated.css
+++ b/react-meme-app/src/meme-components/MemeGenerated.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
     overflow: hidden !important;
     height: 100%;
 }
@@ -19,20 +18,47 @@ background-repeat: no-repeat;
 background-size: cover;
 z-index: -1;
 }
-.copy_url_btn{
-    margin: 10px !important;
-    text-transform: inherit !important;
-    font-size: 16px !important;
+.meme_generate_div_header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    text-align: center;
 }
+.meme_generate_div_header-h{
+    flex: 0.6;
+    text-align: start;
+}
+.meme_generate_div_header-h>h1{
+ 
+    color: #edf4fb;
+    font-weight: 300 !important;
+  
+    font-size: 50px;
+    padding-left: 5%;
+}
+.meme_generate_div_header_b{
+    flex: 0.4;
+    margin: auto;
+}
+
+.meme_generate_div_header_b>button{
+margin-right: 2%;
+}
+
 .meme_generated_div>h1{
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     padding: 0 !important;
     margin-top: 5px !important;
     margin-bottom: 3px !important;
     font-weight: 400;
 }
 
-
+.meme_generated_footer{
+    margin-bottom: 10px;
+}
 .meme_generated_footer>p{
-    font-family: 'Times New Roman', Times, serif;
+    /* font-family: 'Times New Roman', Times, serif; */
+    color: #edf4fb;
+    font-weight: 300 !important;
 }
