--- a/react-meme-app/src/meme-components/Generate-Meme.css
+++ b/react-meme-app/src/meme-components/Generate-Meme.css
@@ -36,7 +36,7 @@ top: 0px;
 left: 0px;
 right: 0px;
 bottom: 0px;
-background: url('../login-components/background-img.jpg');
+background: url('../assets/background-img.png');
 background-repeat: no-repeat;
 background-size: cover;
 z-index: -1;
