--- a/react-meme-app/src/meme-components/MemePage.css
+++ b/react-meme-app/src/meme-components/MemePage.css
@@ -31,6 +31,7 @@
 .meme-logo {
   height: 60px;
   width: auto;
+  cursor: pointer;
 }
 
 /* Right: Buttons */
@@ -157,6 +158,28 @@
   background-color: #8C3B3B;
   transform: scale(1.4);
 }
+
+.user-avatar {
+  width: 40px;
+  height: 40px;
+  background-color: #8C3B3B;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: default;
+  transition: background-color 0.3s ease;
+  position: relative;
+}
+
+/* Optional: subtle hover effect */
+.user-avatar:hover {
+  background-color: #491b1b;
+}
+
 
 @media screen and (max-width: 600px) {
   .nav-dots {
