--- a/react-meme-app/src/meme-components/SaveList.css
+++ b/react-meme-app/src/meme-components/SaveList.css
@@ -1,11 +1,8 @@
-.saveList{
-  /* background-color: #EAE7DC; */
-  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
-}
-.movie-grid {
+.meme-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
+    max-width: 1200px;
   }
   .saveList_header{
     display: flex;
@@ -33,13 +30,13 @@
     margin-bottom: 10px;
   }
   @media screen and (max-width: 1200px) {
-    .movie-grid {
+    .meme-grid {
       grid-template-columns: repeat(2, 1fr);
     }
  
   }
   @media screen and (max-width: 900px) {
-    .movie-grid {
+    .meme-grid {
       grid-template-columns: repeat(1, 1fr);
       margin-left: 40px;
     }
@@ -75,7 +72,7 @@
   .saveList_header-t{
    font-size: 30px;
   }
-  .movie-grid{
+  .meme-grid{
     margin-left: 0px;
   }
 }
