used new API for meme-creation and UI changes

--- a/react-meme-app/src/meme-components/MemeCard.css
+++ b/react-meme-app/src/meme-components/MemeCard.css
@@ -27,6 +27,8 @@
 
 .meme_card>img{
     height: 300px;
+    max-width: 300px;
+    object-fit: contain;
 }
 
 .buttons_d{
@@ -41,5 +43,6 @@
 @media screen and (max-width: 600px) {
 .meme_card>img{
     height: 245px;
+    max-width: 250px;
 }
 }
