--- a/react-meme-app/src/meme-components/MemePage.css
+++ b/react-meme-app/src/meme-components/MemePage.css
@@ -56,8 +56,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 400px;
-  max-width: 600px;
+  min-height: fit-content;
+  max-width: 480px;
   width: 100%;
   margin-bottom: 2rem;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
@@ -103,7 +103,7 @@
   flex-wrap: wrap;
   gap: 1rem;
   justify-content: center;
-  margin-bottom: 2rem;
+  margin-bottom: 0.5rem;
 }
 
 .save-btn-group > button {
@@ -137,7 +137,8 @@
   flex-wrap: wrap;
   gap: 8px;
   padding-bottom: 12px;
-  margin-bottom: 18px;
+  margin-bottom: 10px;
+  margin-top: 5%;
 }
 
 .nav-dots .dot {
@@ -179,6 +180,37 @@
 .user-avatar:hover {
   background-color: #491b1b;
 }
+.tilted-icon{
+  transform: rotate(-45deg);
+  font-size: 20px;
+}
+
+
+/* .protip-banner {
+  margin-top: 30px;
+  padding: 16px 24px;
+  border-top: 2px dashed #d49267;
+  background-color: #fff8f1;
+  font-family: 'Segoe UI', sans-serif;
+  font-size: 18px;
+  color: #4b2e1c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  border-radius: 0 0 12px 12px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.protip-banner .icon {
+  font-size: 22px;
+}
+
+.protip-banner .highlight {
+  font-weight: 600;
+  color: #2d1d0f;
+} */
+
 
 
 @media screen and (max-width: 600px) {
@@ -237,11 +269,11 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1024px) {
+  .meme-box{
+    margin-top: 20%;
+  }
 
-  /* .meme-box > img {
-    max-height: 300px;
-  } */
 
   .prev,
   .next {
@@ -258,7 +290,7 @@
   }
 
   .save-btn-group {
-    margin-top: 2.5rem;
+    margin-top: 1.5rem;
   }
 }
 
