generate-meme css fix

--- a/react-meme-app/src/meme-components/Generate-Meme.css
+++ b/react-meme-app/src/meme-components/Generate-Meme.css
@@ -167,6 +167,7 @@ p{
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+    margin-top: 2%;
     
 }
 .arrow_box>.prev_btn{
