fixed roast-bot input css for mobile responsiveness

--- a/react-meme-app/src/meme-components/RoastMeModal.css
+++ b/react-meme-app/src/meme-components/RoastMeModal.css
@@ -132,3 +132,9 @@
 .chat-input-container button:hover:not(:disabled) {
   background: #e05555;
 }
+
+@media screen and (max-width: 500px) {
+  .chat-input-container input {
+    font-size: 0.85rem;
+  }
+}
