--- a/react-meme-app/src/meme-components/Generate-Meme.css
+++ b/react-meme-app/src/meme-components/Generate-Meme.css
@@ -467,6 +467,10 @@ p{
   overflow: hidden;
 }
 
+.preview-area.no-border-capture {
+  border: none !important;
+}
+
 .placeholder-text {
   width: 100%;
   height: 100%;
