--- a/react-meme-app/src/meme-components/MemeCard.css
+++ b/react-meme-app/src/meme-components/MemeCard.css
@@ -12,7 +12,7 @@
     transition: 100ms ease-in-out;
     margin-top: 10px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    background-color: #edf4fb;
+    background-color: white;
 }
 .meme_card:hover{
     cursor: pointer;
